FIX: unread count is readable

--- a/assets/stylesheets/desktop/topic-list.scss
+++ b/assets/stylesheets/desktop/topic-list.scss
@@ -86,10 +86,14 @@
     }
   }
 
-  .category{
+  .category {
     .badge-category.bigger {
       min-width: 100px;
       text-align: center;
+    }
+
+    .badge-notification.new-posts {
+      color: $gray-light-SP !important;
     }
   }
 }
